clusters/home/cv/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cv-site
  namespace: cv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cv-site
  template:
    metadata:
      labels:
        app: cv-site
    spec:
      containers:
      - name: nginx
        image: ghcr.io/vakym/cv-site:20260718082119 # {"$imagepolicy": "flux-system:cv-site-policy"}
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: cv-site
  namespace: cv
spec:
  selector:
    app: cv-site
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
