clusters/home/cv/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cv-site
  namespace: cv
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - cv.avakym-team.ru
    secretName: cv-site-tls
  rules:
  - host: cv.avakym-team.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cv-site
            port:
              number: 80
